objects/ASI_TnE_Proxy_Driving_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_BasicCost__c</fullName>
        <label>Basic Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Departure_Place__c</fullName>
        <label>Departure Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Destination_Place__c</fullName>
        <label>Destination Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Destination_Time__c</fullName>
        <label>Destination Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_First_Dest__c</fullName>
        <description>First Destination</description>
        <label>1st Destination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_PD_Detail_External_ID__c</fullName>
        <label>Detail External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TnE_LT_1_Credit__c</fullName>
        <formula>ASI_TnE_Amount__c*-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT 1 Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_LT_1_Debit__c</fullName>
        <formula>ASI_TnE_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT 1 Debit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Name_of_Customer_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Proxy Driving Details</relationshipLabel>
        <relationshipName>Proxy_Driving_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_PD_Proxy_Agency_Code__c</fullName>
        <label>Proxy Agency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Phone_No__c</fullName>
        <label>Phone No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Proxy_Driving_Request__c</fullName>
        <label>Proxy Driving Request</label>
        <referenceTo>ASI_TnE_Proxy_Driving_Request__c</referenceTo>
        <relationshipLabel>Proxy Driving Details</relationshipLabel>
        <relationshipName>Proxy_Driving_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_RoutingCost__c</fullName>
        <label>Routing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Usage__c</fullName>
        <label>Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee w/ Customer</fullName>
                </value>
                <value>
                    <fullName>Employee Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_WOC__c</fullName>
        <label>Waiting &amp; Other Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proxy Driving Detail</label>
    <nameField>
        <displayFormat>PDI-{000000}</displayFormat>
        <label>Proxy Driving Claim Detail no.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proxy Driving Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KR_Proxy_Driving</fullName>
        <active>true</active>
        <label>KR Proxy Driving</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_TnE_KR_checkUsage</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_TnE_Usage__c, &apos;Employee w/ Customer&apos;)&amp;&amp; (ISBLANK(ASI_TnE_Name_of_Customer_WS__c)|| ISNULL(ASI_TnE_Name_of_Customer_WS__c)) ,True,False)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Name_of_Customer_WS__c</errorDisplayField>
        <errorMessage>For selected &apos;Usage&apos; option &apos;Employee w/ Customer&apos;, please input &apos;Name of Customer&apos;</errorMessage>
    </validationRules>
</CustomObject>